--- a/src/main/resources/static/idm.htm
+++ b/src/main/resources/static/idm.htm
@@ -75,12 +75,14 @@
 		<!-- Top Nav Start -->
 		<div id="cssmenu">
 			<ul id="url_tab">
-				<li auto-focus="" class="active col-lg-4" id="url_tab_user"><a
-					href="#/user">用户</a></li>
-				<li auto-focus="" class="col-lg-4" id="url_tab_group"><a
-					href="#/group">组</a></li>
-				<li auto-focus="" class="col-lg-4" id="url_tab_profile"><a
-					href="#/profile">个人</a></li>
+				<li auto-focus="" class="active col-lg-3" id="url_tab_user"><a
+					href="#/user">用户信息</a></li>
+				<li auto-focus="" class="col-lg-3" id="url_tab_group"><a
+					href="#/group">人事管理</a></li>
+				<li auto-focus="" class="col-lg-3" id="url_tab_report"><a
+					href="#/report">报表统计</a></li>
+				<li auto-focus="" class="col-lg-3" id="url_tab_system"><a
+					href="#/system">系统管理</a></li>
 			</ul>
 		</div>
 
@@ -93,85 +95,85 @@
 	<!-- Main Container end -->
 	<!-- Main Container end -->
 	<script src="js/jquery.min.js">
-		
+
 	</script>
 	<script src="js/bootstrap.min.js">
-		
+
 	</script>
 	<script src="js/echarts.js">
-		
+
 	</script>
 	<script charset="UTF-8" src="bower_components/angular/angular.js">
-		
+
 	</script>
 	<script charset="UTF-8"
 		src="bower_components/angular-translate_2.4.2/angular-translate.min.js">
-		
+
 	</script>
 	<script charset="UTF-8"
 		src="bower_components/angular-animate_1.4.6/angular-animate.min.js">
-		
+
 	</script>
 
 	<script charset="UTF-8"
 		src="bower_components/angular-strap_2.1.6/angular-strap.min.js">
-		
+
 	</script>
 	<script charset="UTF-8"
 		src="bower_components/angular-strap_2.1.6/angular-strap.tpl.min.js">
-		
+
 	</script>
 	<script charset="UTF-8"
 		src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.min.js">
-		
+
 	</script>
 
 
 
 
 	<script src="components/ui-bootstrap-tpls.min.js">
-		
+
 	</script>
 	<script src="bower_components/angular-route/angular-route.js">
-		
+
 	</script>
 	<script src="bower_components/angular-cookie/angular-cookies.min.js">
-		
+
 	</script>
 	<script src="components/ng-file-upload.min.js">
-		
+
 	</script>
 	<script src="components/ng-file-upload-shim.min.js">
-		
+
 	</script>
 	<script src="components/angular-ui-switch.min.js">
-		
+
 	</script>
 	<script src="components/angular-locale_zh-cn.js">
-		
+
 	</script>
 	<script charset="UTF-8" src="components/idm/app.js">
-		
+
 	</script>
 	<script charset="UTF-8" src="components/act/common/directives.js"></script>
 	<script charset="UTF-8" src="components/http.js">
-		
+
 	</script>
 	<script charset="UTF-8" src="components/auto-focus.js">
-		
+
 	</script>
 	<script src="layer/layer.js" type="text/javascript">
-		
+
 	</script>
 	<script src="js/common.js" type="text/javascript">
-		
+
 	</script>
 
 	<script charset="UTF-8" src="view/idm/user/controller.js">
-		
+
 	</script>
 	<script charset="UTF-8" src="view/idm/group/controller.js">
-		
+
 	</script>
 
 	<script src="bower_components/select2/plugins/select2/select2.min.js"
