--- a/src/main/resources/static/idm.htm
+++ b/src/main/resources/static/idm.htm
@@ -75,14 +75,13 @@
 		<!-- Top Nav Start -->
 		<div id="cssmenu">
 			<ul id="url_tab">
-				<li auto-focus="" class="active col-lg-3" id="url_tab_user"><a
-					href="#/user">用户信息</a></li>
-				<li auto-focus="" class="col-lg-3" id="url_tab_group"><a
-					href="#/group">人事管理</a></li>
-				<li auto-focus="" class="col-lg-3" id="url_tab_report"><a
-					href="#/report">报表统计</a></li>
-				<li auto-focus="" class="col-lg-3" id="url_tab_system"><a
-					href="#/system">系统管理</a></li>
+				<li auto-focus="" class="active col-lg-4" id="url_tab_user"><a
+					href="#/user">用户管理</a></li>
+				<li auto-focus="" class="col-lg-4" id="url_tab_group"><a
+					href="#/group">组管理</a></li>
+				<li auto-focus="" class="col-lg-4" id="url_tab_profile"><a
+					href="#/report">个人</a></li>
+
 			</ul>
 		</div>
 
