--- a/src/main/resources/static/idm.htm
+++ b/src/main/resources/static/idm.htm
@@ -42,7 +42,7 @@
 	<!-- Header Start -->
 	<header>
 		<a class="logo" href="report.html"> <img alt="Logo"
-			src="img/logo.png" />
+			src="img/zhlogo.png" />
 		</a>
 		<div class="pull-right">
 			<ul class="clearfix" id="mini-nav">
